--- a/2023-02/2023-02-01 - Chug (G20 M13 Z11 E6) - SC Guild.md
+++ b/2023-02/2023-02-01 - Chug (G20 M13 Z11 E6) - SC Guild.md
@@ -30,3 +30,48 @@ Moonrest
 * Myldris gets horseshoe of the zephyr
 * Ser G gets the Serpent's Fang
 * Pixie dust goes to Calindal
+# Quest Report
+`Author: aaazzzrrr (Calindal 20, H12, L5)`
+
+
+I write this report with a heavy heart and a burning vengeance. A terrible victory was won today, a loss far greater than mine.
+
+&nbsp;
+
+My recollection begins with a meeting between the most trusted of the holy city of Moonrest, invoked by Lady Evermore herself. Whilst the High Priestess convened with us, one of my own brothers and sisters in the order came with haste, delivering a message. A terrible attack was committed in the outskirts of the city... Zhirra's camp was pilfered. The Disciples of the White Rod were responsible. *Loviatar.*
+
+&nbsp;
+
+In the span of a night, they managed, with supernatural power, to take the citizens of Moonrest hostage, along with Zhirra and a trusted paladin of our order... Tristana. Following the trail, and receiving divine aid from the angel Aurora of the Boros Legion whom came down to aid us in our mission, we traveled east and north, past the fields of Emmith Hilyith.
+
+&nbsp;
+
+As soon as we entered, we realized this was a wayshrine. The fourth wayshrine, revealed to us by Analor, moons ago. The Lunar Lady bid us to chase the White Rod to the best of our ability. Her followers were harmed, and that would not stand.
+
+&nbsp;
+
+Immediately when we entered the high elven ruin, we suffered magical darkness. Crystals lit our way, and we saw the frescoes of the old elves. The tales of the Tel'Quessir filled the halls. Names etched upon stone, archaic magic, telling a story. It all propelled us to meet the unfortunate fare of those we were meant to protect... a bloody pile of corpses. People, with dreams, aspirations, and families. Faithful. Innocent. The handiwork of *Loviatar.* All are with the Watcher of Souls now.
+
+&nbsp;
+
+And then... we saw Tristana. Broken. Bloodied. Mad. She, tortured, knelt under the pressure. She forgot her oath, and was possessed by the Infernal Hells. She attempted to kill Zhirra. I could not allow this.
+
+&nbsp;
+
+In mere moments... Gaulderscion and I hefted our swords and swung them down upon her, blow after painful blow. My heart is not made of stone. It did not please me to kill her, even if her soul could be returned to her body. The pain Loviatar inflicted... it caused echoes, ripples in the ocean, attempting to drown us in a tidal wave of misery. We stood firm, but lost much.
+
+&nbsp;
+
+With her death, a high elven machine was fuelled, and a wayshrine lit ablaze. Cairnas stood on it at the moment it was activated. We lost him, knowing not where he is. I almost gave my life to attempt and open the wayshrine again, attempt to bring him back. Gwyneth stopped me. With wisdom and the words of Analor, I gave in. A Sending spell may reveal more. I must speak with him, if only to know he is safe. Lunar Lady guide him. Gilbert will aid us in retrieving him. At that comforting notion, we returned to Moonrest.
+
+&nbsp;
+
+I have seen much in my time, faced enemies within and without. Soulless undead. Creatures of the Lower Planes. Snivelling parasites of the Far Realm. But none drew my ire quite like this bloody day. Let it be known to all, and especially to the followers of wicked gods and evil ways, that I will not rest until I see every last shrine toppled, every slight corrected, every prayer book destroyed. Those that plague us from within and prey on the weak. Those that threaten Ashford with undeath and the destruction of the Abyss. They will not earn my mercy any longer.
+
+&nbsp;
+
+May the Lunar Lady guide my blade,
+
+&nbsp;
+
+Calindal of Moonrest
